--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script type="text/javascript" src="js/trail.js" ></script>
 	<script type="text/javascript" src="js/animatesprite.js" ></script>
 	<script type="text/javascript" src="js/musicbars.js" ></script>
-	<script type="text/javascript" src="js/musicScene.js" ></script>
+	<script type="text/javascript" src="js/musicscene.js" ></script>
 	<style>
 		html,body{
 			width: 100%;
