--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<div id="loading">Loading...</div>
 		<div id="loadingBar"></div>
 		<script>
-			debug = true;
+			debug = false;
 			var preload,
 				world,
 				mixer,
